--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,7 +28,7 @@
     })();
 
   </script>
-  <link rel="shortcut icon" href="/images/favicon.gif">
+  <link rel="shortcut icon" href="http://www.dfimg.com/images/favicon.gif">
 </head>
 <body>
 
