--- a/app/views/layouts/_blog_about.html.erb
+++ b/app/views/layouts/_blog_about.html.erb
@@ -5,10 +5,10 @@
   <p>Entre em contato via e-mail <a href="mailto:hi@daviferreira.com">hi@daviferreira.com</a>.</p>
   <nav>
     <ul>
-      <li><i class="icon-white icon-home"></i> <%= link_to "Home", blog_path %></li>
-      <li><i class="icon-white icon-calendar"></i> <%= link_to "Arquivo", posts_archive_path %></li>
-      <li><i class="icon-white icon-tags"></i> <%= link_to "Categorias", posts_categories_path %></li>
-      <li><i class="icon-white icon-picture"></i> <%= link_to "Portfolio", root_path %></li>
+      <li><i class="icon-home"></i> <%= link_to "Home", blog_path %></li>
+      <li><i class="icon-calendar"></i> <%= link_to "Arquivo", posts_archive_path %></li>
+      <li><i class="icon-tags"></i> <%= link_to "Categorias", posts_categories_path %></li>
+      <li><i class="icon-picture"></i> <%= link_to "Portfolio", root_path %></li>
     </ul>
   </nav>
 </aside>
