--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -111,18 +111,38 @@ aside time {
   padding: 30px 0 0;
 }
 
+#comments, #comments-form {
+  border-top: 1px solid #dbdbdb;
+}
+
+#comments {
+  background-color: #f7f7f7;
+}
+
 #comments h2 {
   font-family: MuseoSlab100Regular, Helvetica, arial, sans-serif;
   font-size: 32px;
   letter-spacing: -1px;
   line-height: 38px;
-  margin: 0 0 60px;
+  margin: 30px 0 10px;
 }
 
 #comments article {
-  border-bottom: 1px dotted rgba(51, 51, 51, 0.2);
-  margin-bottom: 40px;
-  padding-bottom: 20px;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #fff;
+  margin-bottom: 0;
+  padding-bottom: 40px;
+  padding-top: 40px;
+}
+
+#comments article:first-child {
+  border-top: none;
+  padding-top: none;
+}
+
+#comments article:last-child {
+  border-bottom: none;
+  padding-bottom: 60px;
 }
 
 #comments article img, aside.about img {
@@ -149,11 +169,17 @@ aside time {
   color: #0e365b;
 }
 
+#comments-form {
+  padding-top: 30px;
+  background-color: #f4f4f4;
+}
+
 #comments-form h2 {
   font-family: MuseoSlab100Regular, Helvetica, arial, sans-serif;
   font-size: 32px;
   letter-spacing: -1px;
   line-height: 38px;
+  margin-top: 30px;
 }
 
 #comments-form form {
