--- a/app/views/layouts/_blog_about.html.erb
+++ b/app/views/layouts/_blog_about.html.erb
@@ -1,8 +1,9 @@
 <aside class="about clearfix">
   <p class="avatar"><%= image_tag "me.jpg" %></p>
-  <p class="info">Davi Ferreira trabalha como desenvolvedor na <a href="http://www.globo.com" rel="external" title="Globo.com">Globo.com</a>, atuando nos sites de entretenimento.</p>
-  <p class="clear">Você pode seguí-lo no <a href="http://twitter.com/davitferreira">Twitter</a> e conferir seus projetos open source no <a href="http://www.github.com/daviferreira">GitHub</a>.</p>
+  <p class="info">Davi Ferreira trabalha como desenvolvedor na <a href="http://www.globo.com" rel="external" title="Globo.com">Globo.com</a>.</p>
+  <p class="clear">Você pode seguí-lo no <a href="http://twitter.com/davitferreira">Twitter</a> e conferir seus projetos open source no <a href="http://www.github.com/daviferreira">github</a>.</p>
   <p>Entre em contato via e-mail <a href="mailto:hi@daviferreira.com">hi@daviferreira.com</a>.</p>
+  <% if blog_home_page? %>
   <nav>
     <ul>
       <li><i class="icon-home"></i> <%= link_to "Home", blog_path %></li>
@@ -11,4 +12,5 @@
       <li><i class="icon-picture"></i> <%= link_to "Portfolio", root_path %></li>
     </ul>
   </nav>
+  <% end %>
 </aside>
