--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,27 +1,28 @@
-<%= form_for @post, :url => url do |f| %>
+<%= form_for @post, :url => url , :html => {:class => "minimal"} do |f| %>
 
   <%= render 'admin/shared/error_messages', :object => f.object %>
 
   <fieldset>
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :placeholder => "Title goes here", :autocomplete => "off" %>
   </fieldset>
-  
+
+<!--  
   <fieldset>
     <%= f.label :published_date %>
     <%= f.text_field :published_date %>
   </fieldset>
-  
+-->
   <fieldset>
     <%= f.label :abstract %>
-    <%= f.text_area :abstract %>
+    <%= f.text_area :abstract, :placeholder => "Intro goes here" %>
   </fieldset>
 
   <fieldset>
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :placeholder => "Write your text here" %>
   </fieldset>
-
+<!--
   <fieldset>
     <%= f.label "URL do post no Tableless" %>
     <%= f.text_field :tableless %>
@@ -72,7 +73,7 @@
     <label><%= check_box_tag "categories[]", category.id, checked %> <%= category.name %></label>
   <% end %>  
   </fieldset>
-  
+  -->
   <footer>
     <div class="submit_link">
       <%= f.submit "Salvar", :class => "alt_btn" %>
@@ -80,3 +81,7 @@
   </footer>
 
 <% end %>
+
+<script>
+$('textarea').elastic();
+</script>
