--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -85,12 +85,23 @@
 <% end %>
 
 <script>
+var converter = new Showdown.converter(),
+    html = '';
 $('textarea').elastic();
 $('#btn-preview').click(function (e) {
   e.preventDefault();
   if ($('#preview').length === 0) {
-    $('.module_content').append('<div id="preview" />');
-    // implement markdown converter JS style
+    $('.module_content').append('<article id="preview" class="post" />');
   }
+  html = converter.makeHtml($('#post_body').val());
+  $('#post_body').fadeOut(function () {
+    $('#preview').html(html).fadeIn();
+  });
+});
+$('#btn-close-preview').live('click', function (e) {
+  e.preventDefault();
+  $('#preview').fadeOut(function () {
+    $('#post_body').fadeIn();
+  });
 });
 </script>
