Adiciona ações para publicar e despublicar

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -2,6 +2,8 @@
 
   <%= render 'admin/shared/error_messages', :object => f.object %>
 
+  <%= f.hidden_field :published %>
+
   <fieldset>
     <%= f.label :title %>
     <%= f.text_field :title, :placeholder => "Title goes here", :autocomplete => "off" %>
@@ -77,7 +79,11 @@
   <footer>
     <div class="actions">
       <%= f.submit "Salvar", :class => "btn" %>
-      <button class="btn">Publicar</button>
+      <% if @post.published? %>
+        <button class="btn" id="btn-unpublish">Despublicar</button>
+      <% else %>
+        <button class="btn" id="btn-publish">Publicar</button>
+      <% end %>
       <button class="btn btn-preview" id="btn-preview">Preview</button>
       <button class="btn btn-preview" id="btn-close-preview" style="display:none;">Editar</button>
     </div>
@@ -106,5 +112,15 @@ $('#btn-close-preview').click(function (e) {
   $('#btn-preview').show();
   $('#preview').hide();
   $('#post_body').show();
+});
+$('#btn-publish').click(function (e) {
+  e.preventDefault();
+  $('#post_published').val(1);
+  $('.module_content').find('form:first').submit();
+});
+$('#btn-unpublish').click(function (e) {
+  e.preventDefault();
+  $('#post_published').val(0);
+  $('.module_content').find('form:first').submit();
 });
 </script>
