Transforma título do post em textarea

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -6,7 +6,7 @@
 
   <fieldset>
     <%= f.label :title %>
-    <%= f.text_field :title, :placeholder => "Title goes here", :autocomplete => "off" %>
+    <%= f.text_area :title, :placeholder => "Title goes here" %>
   </fieldset>
 
 <!--  
