--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -4,19 +4,27 @@
 
   <%= f.hidden_field :published %>
 
-  <% if @post.published_date %>
-  <time><%= l @post.published_date %></time>
-  <% end %>
-
-
   <fieldset>
     <%= f.label "URL do post no Tableless" %>
     <%= f.text_field :tableless, :placeholder => "URL do post no Tableless" %>
   </fieldset>
 
+  <fieldset class="categories">
+    <% @categories.each do |category| %>
+      <% if @post.categories and @post.categories.include?(category) %>
+        <% checked = true %>
+      <% else %>
+        <% checked = false %>
+      <% end %>
+      <label><%= check_box_tag "categories[]", category.id, checked %> <%= category.name %></label>
+    <% end %>  
+  </fieldset>
+
+
+
     <fieldset>
     <%= f.label :published_date %>
-    <%= f.text_field :published_date, :placeholder => "Data de publicação" %>
+    <%= f.datetime_select :published_date %>
   </fieldset>
 
   <fieldset>
@@ -71,16 +79,6 @@
     <%= f.text_field :tags %>
   </fieldset>
   
-  <fieldset>
-  <% @categories.each do |category| %>
-    <% if @post.categories and @post.categories.include?(category) %>
-      <% checked = true %>
-    <% else %>
-      <% checked = false %>
-    <% end %>
-    <label><%= check_box_tag "categories[]", category.id, checked %> <%= category.name %></label>
-  <% end %>  
-  </fieldset>
   -->
   <footer>
     <div class="actions">
